--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_181">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_191">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
@@ -14,8 +14,8 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="C:/SQLite/drives/sqlite-jdbc-3.21.0.jar"/>
-	<classpathentry kind="lib" path="C:/Java/_Ferramentas/jackson-annotations-2.9.7.jar"/>
-	<classpathentry kind="lib" path="C:/Java/_Ferramentas/jackson-databind-2.9.7.jar"/>
-	<classpathentry kind="lib" path="C:/Java/_Ferramentas/jackson-core-2.9.7.jar"/>
+	<classpathentry kind="lib" path="C:/Java/_bibliotecas/jackson-annotations-2.9.7.jar"/>
+	<classpathentry kind="lib" path="C:/Java/_bibliotecas/jackson-core-2.9.7.jar"/>
+	<classpathentry kind="lib" path="C:/Java/_bibliotecas/jackson-databind-2.9.7.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
